moving model defs to separate folders

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "mnist-vae"]
-	path = mnist-vae
+[submodule "mnist_vae"]
+	path = mnist_vae
 	url = https://github.com/AshishBora/mnist-vae
